<?xml version="1.0"?>
<package format="2">
  <name>labjack_msgs</name>
  <version>0.0.0</version>
  <description>The labjack_msgs package</description>

  <maintainer email="velin.dimitrov@tri.global">Velin Dimitrov</maintainer>

  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>

  </export>
</package>
