<?xml version="1.0"?>
<package format="2">
    <name>labjack_ros_driver</name>
    <version>0.0.0</version>
    <description>ROS driver for Labjack devices using LJM library</description>

    <maintainer email="velin.dimitrov@tri.global">Velin Dimitrov</maintainer>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    
    <export>
        <metapackage />
    </export>

</package>