<?xml version="1.0"?>
<package format="2">
  <name>labjackt7test</name>
  <version>0.0.0</version>
  <description>The labjackt7test package</description>

  <maintainer email="yujun.lai@student.uts.edu.au">Yujun Lai</maintainer>

  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>labjackt7test_msgs</build_depend>
  <exec_depend>labjackt7test_msgs</exec_depend>

  <build_depend>LabJackM</build_depend>
  <exec_depend>LabJackM</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
