<?xml version="1.0"?>
<package format="2">
  <name>labjackt7test_msgs</name>
  <version>0.0.0</version>
  <description>The labjackt7test_msgs package</description>

  <maintainer email="yujun.lai@student.uts.edu.au">Yujun Lai</maintainer>

  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>

  </export>
</package>
